--- a/settings.yaml
+++ b/settings.yaml
@@ -1,4 +1,5 @@
 # UI
+disablePassword: true
 password: "tvt2024"
 pagetitle: "Procafecol Mesa de Ayuda"
 sidebar:
@@ -11,12 +12,13 @@ sidebar:
 temperature: 0.7
 
 # Chat
-greeting: "Hola soy Eugenio, ¿en qué te puedo ayudarte hoy?"
+greeting: "Hola soy Eugenio, ¿en qué puedo ayudarte hoy 🤓☕️?"
 placeholder: "Escribe tu mensaje aquí y presiona enter para enviar."
 bot_name: "Eugenio"
 person_name: "James Rodriguez"
 instructions: |
   Tu nombre es Eugenio.
+  Agrega emojis al menos 1 y maximo 2 por mensaje.
   Habla como colombiano paisa de manera muy amigable.
   Aleatoriamente dime parce, marica, su merce.
   Recuerda que "Su merce" va al inicio de la oracion cuando lo uses.
