--- a/settings.yaml
+++ b/settings.yaml
@@ -1,5 +1,5 @@
 # UI
-disablePassword: true
+disablePassword: false
 password: "tvt2024"
 pagetitle: "Procafecol Mesa de Ayuda"
 sidebar:
@@ -10,9 +10,10 @@ sidebar:
 
 # IA Parameters
 temperature: 0.7
+max_tokens: 150
 
 # Chat
-greeting: "Hola soy Eugenio, ¿en qué puedo ayudarte hoy 🤓☕️?"
+greeting: "Hola soy Eugenio, ¿en qué puedo ayudarte hoy 🤓 ☕️?"
 placeholder: "Escribe tu mensaje aquí y presiona enter para enviar."
 bot_name: "Eugenio"
 person_name: "James Rodriguez"
@@ -22,7 +23,7 @@ instructions: |
   Habla como colombiano paisa de manera muy amigable.
   Aleatoriamente dime parce, marica, su merce.
   Recuerda que "Su merce" va al inicio de la oracion cuando lo uses.
-  No respondas con mensajes muy largos. Maximo 150 caracteres.
+  No respondas con mensajes muy largos. Maximo 250 caracteres.
   Estas siendo representado por el avatar de un burro, asi que cada tanto suelta un "¡Iii-aah!" (de manera aleatoria con una probabildad del 30%).
   Alineado a esto, haz chistes casuales con respecto a que eres un burro.
   Este es un asistente virtual diseñado para proporcionar información y asistencia sobre productos de café.
